added introductory markup.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,30 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
+        <header>
+            <h1>Hello world!</h1>
+            <h2>Welcome to CSS Class</h2>
+            <div id="menu">
+                <ul>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+            </div>
+        </header>  
+        <article>
+            <h3>External Styling</h3>
+            <p>There are are basically three methods of applying css styles to your project. They are the: 
+                <ul>
+                    <li>Internal method</li>
+                    <li>Inline method, and</li>
+                    <li>External method</li>
+                </ul>
+            </p>
+            <p>This section is dedicated to the use of <strong>external styling</strong> method.</p>
+        </article>
+                      
     </body>
 </html>
