--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <h2>Welcome to CSS Class</h2>
             <div id="menu">
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="About">About</a></li>
+                    <li><a href="html.html">HTML</a></li>
+                    <li><a href="css.html">CSS</a></li>
+                    <li><a href="alumni-gallery.html">Alumni</a></li>
                 </ul>
             </div>
         </header>  
