--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>Welcome to CSS Class</h2>
             <div id="menu">
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="About">About</a></li>
                     <li><a href="html.html">HTML</a></li>
                     <li><a href="css.html">CSS</a></li>
