--- a/index.html
+++ b/index.html
@@ -13,30 +13,32 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header>
-            <h1>Hello world!</h1>
-            <h2>Welcome to CSS Class</h2>
-            <div id="menu">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="About">About</a></li>
-                    <li><a href="html.html">HTML</a></li>
-                    <li><a href="css.html">CSS</a></li>
-                    <li><a href="alumni-gallery.html">Alumni</a></li>
-                </ul>
+        <div id="container">
+            <div id="body">
+                <header>
+                    <h2>Welcome to CSS Class</h2>
+                    <div id="menu">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="About">About</a></li>
+                            <li><a href="html.html">HTML</a></li>
+                            <li><a href="css.html">CSS</a></li>
+                            <li><a href="alumni-gallery.html">Alumni</a></li>
+                        </ul>
+                    </div>
+                </header>  
+                <article>
+                    <h3>External Styling</h3>
+                    <p>There are are basically <ins>three methods</ins> of applying css styles to your project. They are the: 
+                        <ul>
+                            <li>Internal method</li>
+                            <li>Inline method, and</li>
+                            <li>External method</li>
+                        </ul>
+                    </p>
+                    <p>This section is dedicated to the use of <strong>external styling</strong> method.</p>
+                </article>
             </div>
-        </header>  
-        <article>
-            <h3>External Styling</h3>
-            <p>There are are basically three methods of applying css styles to your project. They are the: 
-                <ul>
-                    <li>Internal method</li>
-                    <li>Inline method, and</li>
-                    <li>External method</li>
-                </ul>
-            </p>
-            <p>This section is dedicated to the use of <strong>external styling</strong> method.</p>
-        </article>
-                      
+        </div>            
     </body>
 </html>
