Modified the markup.

--- a/about.html
+++ b/about.html
@@ -13,11 +13,12 @@
     </head>
     <body>
        <div id="container">
-            <h1>About Us</h1>
-            <p>Stutern is Nigeria's fast growing online platform that connects interns with employers. Founded in Lagos Nigeria. <br>
-            Every day, we go to work hoping to do just one thing: Empower more workplaces with talented interns. <br>
-            When you join Stutern, you get access to awesome internships that can help you excel. <br>
-            When you join Stutern as an employer you get access to the best talents that can help you achieve your organization's incredible goals.</p>
+            <h1>Internal CSS Styling</h1>
+            <h2>About Us</h2>
+            <p><a href="stutern.com">Stutern</a> is Nigeria's fast growing online platform that connects interns with employers. Founded in Lagos Nigeria. <br>
+            Every day, we go to work hoping to do just one thing: <strong>Empower more workplaces with talented interns</strong>. <br>
+            When you join <a href="stutern.com">Stutern</a>, you get access to awesome internships that can help you excel. <br>
+            When you join <a href="stutern.com">Stutern</a> as an employer you get access to the best talents that can help you achieve your organization's incredible goals.</p>
        </div>       
     </body>
 </html>
