--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div id="menu">
                         <ul>
                             <li><a href="index.html">Home</a></li>
-                            <li><a href="About">About</a></li>
+                            <li><a href="about.html">About</a></li>
                             <li><a href="html.html">HTML</a></li>
                             <li><a href="css.html">CSS</a></li>
                             <li><a href="alumni-gallery.html">Alumni</a></li>
