added back-home button and applied text-decoration to links.

--- a/about.html
+++ b/about.html
@@ -10,15 +10,31 @@
         <title>Internal CSS</title>
         <meta name="description" content="Internal CSS">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style type="text/css">
+            body {
+                font-family: 'Arial Narrow', Arial, sans-serif;
+                background-color: beige;
+            }
+
+            h1, h2 {
+                color: rgb(151, 145, 145);
+            }
+
+            a {
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
        <div id="container">
             <h1>Internal CSS Styling</h1>
             <h2>About Us</h2>
             <p><a href="stutern.com">Stutern</a> is Nigeria's fast growing online platform that connects interns with employers. Founded in Lagos Nigeria. <br>
-            Every day, we go to work hoping to do just one thing: <strong>Empower more workplaces with talented interns</strong>. <br>
-            When you join <a href="stutern.com">Stutern</a>, you get access to awesome internships that can help you excel. <br>
+                Every day, we go to work hoping to do just one thing: <strong>Empower more workplaces with talented interns</strong>. </p>
+            <p>When you join <a href="stutern.com">Stutern</a>, you get access to awesome internships that can help you excel. <br>
             When you join <a href="stutern.com">Stutern</a> as an employer you get access to the best talents that can help you achieve your organization's incredible goals.</p>
-       </div>       
+       </div>  
+       
+       <a href="index.html">Home</a>
     </body>
 </html>
