--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="about.html">About</a></li>
-                            <li><a href="html.html">HTML</a></li>
+                            <!-- <li><a href="html.html">HTML</a></li> -->
                             <li><a href="css.html">CSS</a></li>
                             <li><a href="alumni-gallery.html">Alumni</a></li>
                         </ul>
