Tried to play around some elements

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 </header>  
                 <article>
                     <h3>External Styling</h3>
-                    <p>There are are basically <ins>three methods</ins> of applying css styles to your project. They are the: 
+                    <p>There are are basically <ins>three methods</ins> of applying css styles to your project. They are the: </p>
                         <ul>
                             <li>Internal method</li>
                             <li>Inline method, and</li>
                             <li>External method</li>
                         </ul>
-                    </p>
+                    <br>
                     <p>This section is dedicated to the use of <strong>external styling</strong> method.</p>
                 </article>
             </div>
